# Llamabook

./: .env.example  .gitignore  README.md  opencode.json  skills-lock.json
backend/: AGENTS.md  README.md  pyproject.toml
backend/src/llamabook/: config.py  database.py  dependencies.py  exceptions.py  lifespan.py  main.py  prompts.py
backend/src/llamabook/adapters/file_storage/: validators.py
backend/src/llamabook/adapters/ollama/: client.py
backend/src/llamabook/api/v1/: router.py
backend/src/llamabook/api/v1/endpoints/: agents.py  auth.py  chat.py  documents.py  embeddings.py  files.py  memory.py  models.py  notebooks.py  tts.py  users.py
backend/src/llamabook/api/v1/schemas/: common.py
backend/src/llamabook/core/: security.py
backend/src/llamabook/models/: agent.py  base.py  chat.py  embedding.py  file.py  notebook.py  output.py  revoked_token.py  user.py
backend/src/llamabook/repositories/: __init__.py  agent_repository.py  base_repository.py  chat_repository.py  embedding_repository.py  file_repository.py  notebook_repository.py  output_repository.py  revoked_token_repository.py  user_repository.py
backend/src/llamabook/schemas/: agent.py  auth.py  chat.py  embedding.py  file.py  notebook.py  output.py  tts.py
backend/src/llamabook/services/: agent_service.py  auth_service.py  chat_service.py  embedding_service.py  file_service.py  memory_service.py  notebook_service.py  output_service.py  tts_service.py
frontend/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
template/: nexusai-full-interface-v6-2.html
(+189 files in other folders)
